# esp32s3-learning

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  partitions_esp32s3_16Mb.csv  sdkconfig
Middlewares/HttpApi/: CMakeLists.txt
Middlewares/HttpApi/HttpApi/: http_api.c  http_api.h
Middlewares/LedController/: CMakeLists.txt
Middlewares/LedController/LedController/: led_controller.c  led_controller.h
Middlewares/StripConfig/: CMakeLists.txt
Middlewares/StripConfig/StripConfig/: strip_config.c  strip_config.h
Middlewares/WifiSetup/: CMakeLists.txt
Middlewares/WifiSetup/WifiSetup/: wifi_setup.c  wifi_setup.h
components/BSP/: CMakeLists.txt
components/BSP/LED/: led.c  led.h  led_driver.c  led_driver.h
docx/: http-api-manual.md
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
